initial commit - basic

--- a/helloWorldUsingJs.html
+++ b/helloWorldUsingJs.html
@@ -11,7 +11,7 @@
         // Writing Hello world using javascript
 
         const heading = document.createElement("h1");
-        heading.innerHTML = "Hello World using Javascript!";
+        heading.innerHTML = "Hello World using Javascript!!";
 
         const root = document.getElementById("root");
         root.appendChild(heading).appendChild(heading2);
